fix: update hover color for blog item links for better visibility

--- a/public/web_assets/css/style.css
+++ b/public/web_assets/css/style.css
@@ -5666,7 +5666,7 @@ body,
 .torch-red .blog-area .blog-items h4 a:hover,
 .torch-red .blog-area .blog-items h5 a:hover,
 .torch-red .blog-area .blog-items .meta a:hover {
-	color: #ee2852;
+	color: #ED1C24;
 }
 
 .blog-area .meta {
